--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -12,7 +12,9 @@
   <Menu id="product" title="商品管理" icon="glyphicon-cutlery" authVal="1024">
     <Menu id="productset" title="商品维护" icon="glyphicon-log-in" url="/ProductSet" authVal="2048">
     </Menu>
-    <Menu id="productquery" title="商品配送" icon="glyphicon-plane" url="/ProductDelive" authVal="4096">
+    <Menu id="productdelive" title="商品配送" icon="glyphicon-plane" url="/ProductDelive" authVal="4096">
+    </Menu>
+    <Menu id="productnumber" title="商品数量" icon="glyphicon-barcode" url="/ProductNumber" authVal="131072">
     </Menu>
   </Menu>
 
@@ -26,10 +28,17 @@
     </Menu>
   </Menu>
 
+  <Menu id="report" title="报表管理" icon="glyphicon-bookmark" authVal="262144">
+    <Menu id="reportofsend" title="商品配送报表" icon="glyphicon-plane" url="/ReportOfSend" authVal="524288">
+    </Menu>
+  </Menu>
+
   <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="4">
     <Menu id="users" title="用户管理" icon="glyphicon-user" url="/Users" authVal="8">
     </Menu>
     <Menu id="roles" title="角色管理" icon="glyphicon-asterisk" url="/Roles" authVal="16">
+    </Menu>
+    <Menu id="dictionary" title="参数管理" icon="glyphicon-book" url="/Dictionary" authVal="1048576">
     </Menu>
     <Menu id="password" title="修改密码" icon="glyphicon-edit" url="/PassWord" authVal="32">
     </Menu>
