将系统中所有的折扣替换为字典 商品添加分类属性

--- a/HWYZ/HWYZ.csproj
+++ b/HWYZ/HWYZ.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\201512070934049_modify1.Designer.cs">
       <DependentUpon>201512070934049_modify1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512071346509_modify2.cs" />
+    <Compile Include="Migrations\201512071346509_modify2.Designer.cs">
+      <DependentUpon>201512071346509_modify2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\LogHelper.cs" />
     <Compile Include="Context\DBContext.cs" />
@@ -461,6 +465,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201512070934049_modify1.resx">
       <DependentUpon>201512070934049_modify1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512071346509_modify2.resx">
+      <DependentUpon>201512071346509_modify2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
