--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -31,6 +31,8 @@
   <Menu id="report" title="报表管理" icon="glyphicon-bookmark" authVal="262144">
     <Menu id="reportofsend" title="商品配送报表" icon="glyphicon-plane" url="/ReportOfSend" authVal="524288">
     </Menu>
+    <Menu id="reportofsell" title="商品畅销报表" icon="glyphicon-yen" url="/ReportOfSell" authVal="2097152">
+    </Menu>
   </Menu>
 
   <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="4">
