修改样式和问题
1.登录页面修改
2.门店管理，增加开户行户名、银行账号、开户名称
3.商品管理价格带单位
4.商品管理中的“退市”状态用红色显示
5.商品管理中图片保存路径修改为相对路径
6.送货员查询条件默认所有条件，“离职”状态红色显示
7.报表默认时间要显示
8.配送报表增加门店类型筛选
9.配送报表文字“按明细”改成“按采购数量”；按“金额”改成“按采购金额”
10.门店管理员-->商品管理--商品维护“允许退货”不需要显示
11.订单配送状态用颜色反差显示
12.时间控件改为中文

--- a/HWYZ/HWYZ.csproj
+++ b/HWYZ/HWYZ.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512211401466_modify.cs" />
+    <Compile Include="Migrations\201512211401466_modify.Designer.cs">
+      <DependentUpon>201512211401466_modify.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\LogHelper.cs" />
     <Compile Include="Context\DBContext.cs" />
@@ -280,6 +284,7 @@
     <Content Include="Content\images\zTreeStandard.gif" />
     <Content Include="Content\images\zTreeStandard.png" />
     <Content Include="Content\jquery-ui.css" />
+    <Content Include="Content\styles.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -316,6 +321,7 @@
     <Content Include="Images\nopic.jpg" />
     <Content Include="Scripts\datetimepicker\bootstrap-datetimepicker.min.css" />
     <Content Include="Scripts\datetimepicker\bootstrap-datetimepicker.min.js" />
+    <Content Include="Scripts\datetimepicker\bootstrap-datetimepicker.zh-CN.js" />
     <Content Include="Scripts\highcharts\data.js" />
     <Content Include="Scripts\highcharts\exporting.js" />
     <Content Include="Scripts\highcharts\highcharts.js" />
@@ -476,9 +482,15 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\ReportOfManage\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201512211401466_modify.resx">
+      <DependentUpon>201512211401466_modify.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
