--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -31,7 +31,7 @@
   <Menu id="report" title="报表管理" icon="glyphicon-bookmark" authVal="262144">
     <Menu id="reportofsend" title="商品配送报表" icon="glyphicon-plane" url="/ReportOfSend" authVal="524288">
     </Menu>
-    <Menu id="reportofsell" title="商品畅销报表" icon="glyphicon-yen" url="/ReportOfSell" authVal="2097152">
+    <Menu id="reportofsell" title="商品畅销报表" icon="glyphicon-apple" url="/ReportOfSell" authVal="2097152">
     </Menu>
   </Menu>
 
