调整整体样式

--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -1,48 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ArrayOfMenu xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Menu id="home" title="首页" icon="glyphicon-th-large" url="/Home" authVal="1"></Menu>
+  <Menu id="home" title="首页" icon="chrome" url="/Home" authVal="1"></Menu>
 
-  <Menu id="store" title="门店管理" icon="glyphicon-home" authVal="64">
-    <Menu id="storegrant" title="门店授权" icon="glyphicon-ok-circle" url="/StoreGrant" authVal="128">
+  <Menu id="store" title="门店管理" icon="building" authVal="64">
+    <Menu id="storegrant" title="门店授权" icon="check-circle" url="/StoreGrant" authVal="128">
     </Menu>
-    <Menu id="storeinfo" title="门店信息" icon="glyphicon-eye-open" url="/StoreInfo" authVal="512">
+    <Menu id="storeinfo" title="门店信息" icon="info" url="/StoreInfo" authVal="512">
     </Menu>
   </Menu>
 
-  <Menu id="product" title="商品管理" icon="glyphicon-cutlery" authVal="1024">
-    <Menu id="productset" title="商品维护" icon="glyphicon-log-in" url="/ProductSet" authVal="2048">
+  <Menu id="product" title="商品管理" icon="cutlery" authVal="1024">
+    <Menu id="productset" title="商品维护" icon="tag" url="/ProductSet" authVal="2048">
     </Menu>
-    <Menu id="productdelive" title="商品配送" icon="glyphicon-plane" url="/ProductDelive" authVal="4096">
+    <Menu id="productdelive" title="商品配送" icon="truck" url="/ProductDelive" authVal="4096">
     </Menu>
-    <Menu id="productnumber" title="商品数量" icon="glyphicon-barcode" url="/ProductNumber" authVal="131072">
-    </Menu>
-  </Menu>
-
-  <Menu id="order" title="采购订单" icon="glyphicon-list-alt" authVal="8192" url="/Order">
-  </Menu>
-
-  <Menu id="send" title="送餐管理" icon="glyphicon-send" authVal="16384">
-    <Menu id="courier" title="送餐员" icon="glyphicon-sunglasses" url="/Couriers" authVal="32768">
-    </Menu>
-    <Menu id="location" title="送餐地址" icon="glyphicon-tags" url="/Locations" authVal="65536">
+    <Menu id="productnumber" title="商品数量" icon="calculator" url="/ProductNumber" authVal="131072">
     </Menu>
   </Menu>
 
-  <Menu id="report" title="报表管理" icon="glyphicon-bookmark" authVal="262144">
-    <Menu id="reportofsend" title="商品配送报表" icon="glyphicon-plane" url="/ReportOfSend" authVal="524288">
+  <Menu id="order" title="采购订单" icon="cart-arrow-down" authVal="8192" url="/Order">
+  </Menu>
+
+  <Menu id="send" title="送餐管理" icon="send" authVal="16384">
+    <Menu id="courier" title="送餐员" icon="motorcycle" url="/Couriers" authVal="32768">
     </Menu>
-    <Menu id="reportofsell" title="商品畅销报表" icon="glyphicon-apple" url="/ReportOfSell" authVal="2097152">
+    <Menu id="location" title="送餐地址" icon="home" url="/Locations" authVal="65536">
     </Menu>
   </Menu>
 
-  <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="4">
-    <Menu id="users" title="用户管理" icon="glyphicon-user" url="/Users" authVal="8">
+  <Menu id="report" title="报表管理" icon="calendar-check-o" authVal="262144">
+    <Menu id="reportofsend" title="商品配送报表" icon="money" url="/ReportOfSend" authVal="524288">
     </Menu>
-    <Menu id="roles" title="角色管理" icon="glyphicon-asterisk" url="/Roles" authVal="16">
+    <Menu id="reportofsell" title="商品畅销报表" icon="thumbs-up" url="/ReportOfSell" authVal="2097152">
     </Menu>
-    <Menu id="dictionary" title="参数管理" icon="glyphicon-book" url="/Dictionary" authVal="1048576">
+  </Menu>
+
+  <Menu id="system" title="系统管理" icon="gear" authVal="4">
+    <Menu id="users" title="用户管理" icon="user" url="/Users" authVal="8">
     </Menu>
-    <Menu id="password" title="修改密码" icon="glyphicon-edit" url="/PassWord" authVal="32">
+    <Menu id="roles" title="角色管理" icon="user-secret" url="/Roles" authVal="16">
+    </Menu>
+    <Menu id="dictionary" title="参数管理" icon="book" url="/Dictionary" authVal="1048576">
+    </Menu>
+    <Menu id="password" title="修改密码" icon="edit" url="/PassWord" authVal="32">
     </Menu>
   </Menu>
 </ArrayOfMenu>
