--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ HWYZ/Migrations/
 HWYZ/Upload/
 文档/~$开发计划.xlsx
 HWYZ/Properties/
+HWYZ/Properties/PublishProfiles/deploy.pubxml.user
+HWYZ/Properties/PublishProfiles/deploy.pubxml.user
