--- a/HWYZ/packages.config
+++ b/HWYZ/packages.config
@@ -42,8 +42,8 @@
   <package id="Microsoft.Net.Http.zh-Hans" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
-  <package id="MvcPager.MVC4.CN" version="2.0.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
   <package id="NPOI" version="2.1.3.1" targetFramework="net45" />
+  <package id="Webdiyer.MvcPager" version="3.0.1.1" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
