--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -33,6 +33,10 @@
     </Menu>
     <Menu id="ReportOfSell" title="商品畅销报表" icon="thumbs-up" url="/ReportOfSell" authVal="2097152">
     </Menu>
+    <Menu id="ReportOfSale" title="营业经营报表" icon="area-chart" url="/ReportOfSale" authVal="4194304">
+    </Menu>
+    <Menu id="ReportOfOrder" title="营业结算报表" icon="bar-chart" url="/ReportOfOrder" authVal="8388608">
+    </Menu>
   </Menu>
 
   <Menu id="system" title="系统管理" icon="gear" authVal="4">
