--- a/HWYZ/HWYZ.csproj
+++ b/HWYZ/HWYZ.csproj
@@ -330,6 +330,7 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="Images\logo.png" />
     <Content Include="Images\nopic.jpg" />
     <Content Include="Scripts\common-scripts.js" />
     <Content Include="Scripts\datetimepicker\bootstrap-datetimepicker.min.css" />
