--- a/HWYZ/HWYZ.csproj
+++ b/HWYZ/HWYZ.csproj
@@ -193,6 +193,8 @@
     <Compile Include="Context\MenuContext.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\OrderDetailController.cs" />
+    <Compile Include="Controllers\OrderSetController.cs" />
     <Compile Include="Controllers\ReportOfOrderController.cs" />
     <Compile Include="Controllers\ReportOfSaleController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
@@ -221,10 +223,6 @@
     <Compile Include="Filters\StoreAuthorizeAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201601181119117_modify.cs" />
-    <Compile Include="Migrations\201601181119117_modify.Designer.cs">
-      <DependentUpon>201601181119117_modify.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\LogHelper.cs" />
@@ -788,11 +786,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201601181119117_modify.resx">
-      <DependentUpon>201601181119117_modify.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
