--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -37,6 +37,8 @@
     </Menu>
     <Menu id="ReportOfOrder" title="营业结算报表" icon="bar-chart" url="/ReportOfOrder" authVal="8388608">
     </Menu>
+    <Menu id="ReportOfAppOrder" title="App结算报表" icon="mobile" url="/ReportOfAppOrder" authVal="16777216">
+    </Menu>
   </Menu>
 
   <Menu id="system" title="系统管理" icon="gear" authVal="4">
