--- a/HWYZ/Web.config
+++ b/HWYZ/Web.config
@@ -10,7 +10,7 @@
     <section name="log4net" type="System.Configuration.IgnoreSectionHandler" />
   </configSections>
   <connectionStrings>
-    <add name="DBContext" connectionString="Data Source=.;Initial Catalog= HWYZ1;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DBContext" connectionString="Data Source=.;Initial Catalog= HWYZ;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
